--- a/koble/android/local.properties
+++ b/koble/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/Users/nephthalimabebe/Library/Android/sdk
-flutter.sdk=/Users/nephthalimabebe/Desktop/Flutter/flutter
+sdk.dir=C:\\Users\\yahya\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
