--- a/koble/pubspec.yaml
+++ b/koble/pubspec.yaml
@@ -46,6 +46,8 @@ flutter:
   assets:
     - assets/profilepic.png
     - assets/koble.png
+    - assets/zebu_logo.png
+    - assets/download.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
